# tfe_muia_unir_188

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RUNBOOK.md  pyproject.toml  tfe_colab_runner.ipynb  tfe_muia_unir_188.code-workspace
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  tarea.yml
.github/agents/: Bibliographer.agent.md  Data Engineer.agent.md  Emergency Domain Expert.agent.md  LaTeX Scribe.agent.md  Professor Synapse.agent.md  Software Architect.agent.md  XAI Evaluator.agent.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
artifacts/: README.md
artifacts/reports/: baseline_expert_v0.1.0.json  baseline_expert_v0.1.0.md  bias_by_category_v0.1.0.csv  bias_by_province_v0.1.0.csv  bias_by_year_v0.1.0.csv  capa1_capa2_e2e_v0.1.0.json  capa1_capa2_e2e_v0.1.0.md  capa1_v0.1.0.json  capa2_for_capa3_handoff_v0.1.0.md  capa2_model_selection_v0.1.0.json  capa2_model_selection_v0.1.0.md  capa2_v0.1.0.json  capa2_v0.1.0.md  evaluation_rulefit_alias_v0.1.0.json  evaluation_rulefit_alias_v0.1.0.md  evaluation_v0.1.0.json  evaluation_v0.1.0.md  explanation_fidelity_cases_v0.1.0.csv  explanation_fidelity_v0.1.0.json  explanation_fidelity_v0.1.0.md  final_evaluation_traceability_v0.1.0.json  final_evaluation_traceability_v0.1.0.md  p1_error_analysis_v0.1.0.csv  rulefit_imodels_v0.1.0.json  rulefit_lite_v0.1.0.json  rulefit_v0.1.0.json
latex/: .gitignore  .latexmkrc  README.md  bibliografia.bib  estilo_unir-1.sty  main.tex
latex/chapters/: anexo_a.tex  anexo_b.tex  anexo_c.tex  anexo_d.tex  anexo_e.tex  anexo_f.tex  anexo_g.tex  anexo_h.tex  anexo_j.tex  anexo_k.tex  anexo_l.tex  chap0.tex  chap1.tex  chap10.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  chap8.tex  chap9.tex
latex/resources/: anexo_a.md  anexo_b.md  anexo_c.md  anexo_d.md  anexo_e.md  anexo_f.md  borrador_rubrica.md  chap0.md  chap1.md  chap10.md  chap2.md  chap3.md  chap4.md  chap5.md  chap6.md  chap7.md  chap8.md  chap9.md  indicaciones.md  rubrica.md
resources/: TFEgrupal.parse.md  guia.parse.md  instrucciones.parse.md  labeling_guide_p1p4.md  programacion.parse.md  reglamento_trabajos_fin_grado_master.parse.md  rubrica.md
resources/adicional/: Prompt para Chatbot Multiagente GraphRAG.md  protocol_stack_ai_tester.html
resources/asignaturas/aprendizaje_automatico_no_supervisado/: ocr_output_Tema 1. Introducción al aprendizaje automático no supervisado.pdf.md  ocr_output_Tema 10. Q-learning.pdf.md  ocr_output_Tema 2. Fundamentos y aplicaciones del agrupamiento K-Means.pdf.md  ocr_output_Tema 3. Diferentes implementaciones de KMeans.pdf.md  ocr_output_Tema 4. Agrupamiento jerárquico.pdf.md  ocr_output_Tema 5. Clustering basado en densidad DBSCAN.pdf.md  ocr_output_Tema 6. Técnicas lineales. Análisis de componentes principales (PCA).pdf.md  ocr_output_Tema 7. Técnicas no lineales. t-SNE, MDS e ISOMAP.pdf.md  ocr_output_Tema 8. Detección de anomalías.pdf.md  ocr_output_Tema 9. Introducción al aprendizaje por refuerzo.pdf.md
resources/asignaturas/razonamienot_y_planificacion_automatica(RPA)/: ocr_output_full_Tema_1._Origen_y_evolución_de_la_inteligencia_artificial_esl-ES.pdf.md  ocr_output_full_Tema_10._Investigación_en_sistemas_cognitivos_esl-ES.pdf.md  (+10 more)
resources/corpus_normativo/: README.md  manifest.yaml
resources/internal_validation/: casos_revision_v0.1.0.csv  casos_revision_v0.1.0.md  plantilla_revision_casos.csv  protocolo_validacion_interna.md
resources/notas/: Disección de la Fase 1 Preparación de la propuesta.md  Ejemplos Tech4Good por tipo de TFE.md  Orientación sobre el TFE Grupal.md  PROMPT MAESTRO — PROTOTIPO MVP.md  Research Report - Optimización del Triage de Emergencias 112 mediante Sistemas Híbridos y XAI.md  ejemplo_TFE_v1.md
scripts/: _test_mcp_tools.py  _val_rag.py  audit_dataset.py  build_capa2_report.py  build_final_evaluation_report.py  build_gold_standard.py  build_internal_validation_sample.py  build_rag_index.py  build_splits.py  build_weak_labels.py  clean_112_cyl.py  compare_capa2_models.py  download_corpus.py  evaluate_baseline_expert.py  evaluate_explanation_fidelity.py  export_schemas.py  inspect_both.py  inspect_rag.py  run_empirical_evaluation.py  run_evaluation.py  run_prototype_smoke_test.py  services.py  train_capa1.py  train_capa2.py  validate_capa1_capa2_e2e.py  validate_services.py
specs/001-priorizacion-112-cyl/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/audio/: parser.py  transcriber.py
src/backend/: __init__.py
src/capa1_nlp/: README.md  __init__.py
src/capa2_rulefit/: __init__.py
src/capa3_llm_mcp/: __init__.py  degraded.py  explainer.py  fidelity_judge.py
src/contracts/: README.md  pyproject.toml
src/contracts/contracts/: __init__.py  enums.py  errors.py  incident_features.py  incident_input.py  inference_log.py  leakage_columns.py  operator_decision.py  operator_recommendation.py  primitives.py  priority_recommendation.py  rule.py  weak_label.py
src/contracts/docs/adr/: 0001-pydantic-as-contract.md  0002-priority-scale-p1-p4-is-academic.md  0003-versioning-strategy.md  0004-no-leakage-policy.md  0005-mcp-as-capa3-interface.md
src/contracts/docs/schemas/: IncidentFeatures.schema.json  IncidentInput.schema.json  InferenceLog.schema.json  OperationalRule.schema.json  OperatorDecision.schema.json  OperatorRecommendation.schema.json  PriorityRecommendation.schema.json  WeakLabel.schema.json
src/contracts/tests/: factories.py  test_enums.py  test_errors.py  test_incident_features.py  test_incident_input.py  test_inference_log.py  test_operator_decision.py  test_operator_recommendation.py  test_priority_recommendation.py  test_roundtrip_all.py  test_rule.py  test_weak_label.py
src/ui/: app.py
tests/: test_adversarial_red_teaming.py  test_backend_api.py  test_baseline_expert.py  test_capa1_capa2_e2e.py  test_capa2_rulefit_structure.py  test_leakage_gate.py  test_rag_retrieval.py  test_schema_diff.py  test_splits.py  test_weak_labels.py
(+112 files in other folders)
