[project]
name = "tfe-muia-unir-188"
version = "0.1.0"
description = "Sistema inteligente de apoyo a la decisión para puestos de mando de emergencias 112 Castilla y León"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Juan Carlos Albert Fillol" },
    { name = "Brian Mathias Pesci Juliani" },
    { name = "Ancor González Carballo" },
]
keywords = ["emergencias", "112", "rulefit", "xai", "llm-local", "mcp", "ue-ia-act"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

# Dependencias mínimas comunes. Cada capa añade las suyas en su propio pyproject.
dependencies = [
    "pydantic>=2.7,<3",
    "python-ulid>=2.2",
    "fastapi[standard]>=0.111",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "polyfactory>=2.16",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/bripedev-source/tfe_muia_unir_188"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# El paquete real vive en src/contracts. Los demás módulos se instalan como subpaquetes propios.
packages = ["src/contracts/contracts"]

# ─────────────────────────── Ruff ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]
extend-exclude = ["build", "artifacts", "latex/build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM", "PL"]
ignore = ["PLR0913"]  # too many args; los contratos Pydantic los tienen por diseño

[tool.ruff.format]
quote-style = "double"

# ─────────────────────────── Black ─────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ─────────────────────────── Mypy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
show_error_codes = true

# Strict solo dentro de contratos. El resto del código se irá endureciendo por capas.
files = ["src/contracts"]

[[tool.mypy.overrides]]
# Dependencias sin stubs en el ecosistema científico
module = ["sklearn.*", "imodels.*", "chromadb.*", "llama_cpp.*", "mcp.*", "streamlit.*"]
ignore_missing_imports = true

# ─────────────────────────── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "src/contracts/tests", "src/capa3_llm_mcp/tests"]
addopts = "-q --strict-markers --strict-config"
markers = [
    "slow: tests lentos (entrenamiento, inferencia LLM)",
    "integration: tests de integración entre capas",
    "leakage: tests del gate anti-leakage (Principio V)",
]

[tool.coverage.run]
branch = true
source = ["src/contracts"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
