[project]
name = "tfe-muia-unir-188"
version = "0.1.0"
description = "Sistema inteligente de apoyo a la decisión para puestos de mando de emergencias 112 Castilla y León"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Juan Carlos Albert Fillol" },
    { name = "Brian Mathias Pesci Juliani" },
    { name = "Ancor González Carballo" },
]
keywords = ["emergencias", "112", "rulefit", "xai", "llm-local", "mcp", "ue-ia-act"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

# Dependencias mínimas comunes. Cada capa añade las suyas en su propio pyproject.
# NOTA: chromadb 0.5.x usa np.float_ eliminado en NumPy 2.0 → numpy<2 fijado.
# chroma-hnswlib 0.7.5 tiene wheels precompilados para Windows (sin MSVC).
dependencies = [
    "pydantic>=2.7,<3",
    "python-ulid>=2.2",
    "fastapi[standard]>=0.111",
    "httpx>=0.27",
    "streamlit>=1.38",
    "pandas>=2.2",
    # NumPy <2 requerido por chromadb 0.5.x (np.float_ fue eliminado en NumPy 2.0)
    "numpy>=1.24,<2",
    # Capa 3 — RAG semántico: corpus normativo CyL (T061-T062)
    # Pin exacto: chromadb 0.5.4 → chroma-hnswlib 0.7.5 (wheel Windows disponible)
    # NO subir a 0.5.5+ (requieren chroma-hnswlib 0.7.6 que necesita MSVC)
    "chromadb==0.5.4",
    "sentence-transformers>=3.0,<4",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
capa2 = [
    "imodels>=2.0,<3",
    "joblib>=1.5,<2",
    "pandas>=2.2,<4",
    "scikit-learn==1.7.2",
]
# capa3 queda como alias docúdmentado; chromadb y sentence-transformers
# ya están en las dependencias principales.
capa3 = []
audio = [
    # Transcripción local de audio → texto. Usa CTranslate2 (sin PyTorch requerido
    # para CPU; con CUDA acelera en GPU como RTX 5070).
    # Modelos disponibles: tiny | base | small | medium | large-v3
    "faster-whisper>=1.0,<2",
]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "polyfactory>=2.16",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/bripedev-source/tfe_muia_unir_188"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# El paquete real vive en src/contracts. Los demás módulos se instalan como subpaquetes propios.
packages = ["src/contracts/contracts"]

# ─────────────────────────── uv ────────────────────────────────────────────────
[tool.uv]
# Instala dev + audio con `uv sync` (sin flags adicionales).
default-groups = ["dev", "audio"]
# Prohíbe compilar chroma-hnswlib desde fuente (requiere MSVC en Windows).
# Sólo se usará el wheel precompilado de chroma-hnswlib==0.7.5.
no-build-package = ["chroma-hnswlib"]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "polyfactory>=2.16",
    "pre-commit>=3.7",
    # Requerido por scripts/build_rag_index.py para leer los PDFs del corpus normativo.
    # Siempre debe instalarse para garantizar reproducibilidad del índice RAG.
    "pdfplumber>=0.11,<1",
    # Requerido por src/capa3_llm_mcp/mcp_server/server.py (FastMCP).
    # Permite exponer search_normative, cite_legal_basis y get_rule_details
    # como tools MCP consumibles desde clientes externos (agentes, IDEs).
    "mcp>=1.0",
]
audio = [
    # Transcripción local de audio → texto para la UI Streamlit.
    # Usa CTranslate2 (CPU o GPU CUDA). Sin él la sección de voz muestra un banner.
    # Modelos: tiny | base | small (default) | medium | large-v3
    "faster-whisper>=1.0,<2",
]

# ─────────────────────────── Ruff ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]
extend-exclude = ["build", "artifacts", "latex/build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM", "PL"]
ignore = ["PLR0913"]  # too many args; los contratos Pydantic los tienen por diseño

[tool.ruff.lint.per-file-ignores]
# Capa de presentación (Streamlit): tipografía rica en español, HTML inline largo,
# imports tardíos y dependencias opcionales (pandas) son intencionales.
"src/ui/*.py" = [
    "E501",    # líneas largas en HTML/CSS inline
    "E402",    # st.set_page_config debe ir antes de algunos imports
    "RUF001",  # caracteres tipográficos ambiguos en strings UI español (—, –, ·)
    "RUF002",  # idem en docstrings
    "RUF003",  # idem en comentarios
    "RUF005",  # concatenación de listas vs unpacking (Streamlit idiom)
    "PLC0415", # imports diferidos (pandas) para arranque rápido
    "F541",    # f-strings sin placeholders (plantillas HTML)
]
# Tests raíz y tests de cada módulo: literales numéricos (códigos HTTP, umbrales),
# imports condicionales por disponibilidad de dependencias opcionales,
# y tipografía española en docstrings son correctos en tests.
"tests/*.py" = ["PLR2004", "RUF001", "RUF002", "RUF003", "E402", "PLC0415", "E501"]
"src/contracts/tests/*.py" = ["PLR2004", "RUF001", "RUF002", "RUF003", "E402", "PLC0415", "E501"]
"src/capa3_llm_mcp/tests/*.py" = ["PLR2004", "RUF001", "RUF002", "RUF003", "E402", "PLC0415", "E501"]
# Contratos: tipografía española (–, α) en docstrings y comentarios es intencional
# para alinearse con la terminología normativa. PLR2004 para umbrales de validación.
"src/contracts/contracts/*.py" = ["RUF001", "RUF002", "RUF003", "PLR2004"]
# Scripts de datos: E402 permitido (imports condicionales por disponibilidad del entorno);
# PLR2004 para constantes de limpieza (columnas, índices) y PLR0915 en main() de scripts.
"scripts/*.py" = ["E402", "PLR2004", "E501", "PLC0415", "PLR0915"]
# Capa 3 MCP/LLM: líneas largas en prompts y cadenas SQL normativas son inevitables;
# imports diferidos y condicionales (chromadb, openai) son el patrón de la capa;
# tipografía española en prompts es intencional.
"src/capa3_llm_mcp/**/*.py" = ["E501", "PLR2004", "RUF001", "RUF002", "RUF003", "E402", "PLC0415"]
# Backend: E501 en rutas y mensajes de error; PLR0915 para pipeline monolítico (fase de prototipo);
# PLC0415 para imports opcionales diferidos; PLR2004 para umbrales de confianza.
"src/backend/**/*.py" = ["E501", "PLR0915", "PLC0415", "PLR2004"]

[tool.ruff.format]
quote-style = "double"

# ─────────────────────────── Black ─────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ─────────────────────────── Mypy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
show_error_codes = true

# Strict solo dentro de contratos. El resto del código se irá endureciendo por capas.
files = ["src/contracts"]

[[tool.mypy.overrides]]
# Dependencias sin stubs en el ecosistema científico
module = ["sklearn.*", "imodels.*", "chromadb.*", "llama_cpp.*", "mcp.*", "streamlit.*"]
ignore_missing_imports = true

# ─────────────────────────── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "src/contracts/tests", "src/capa3_llm_mcp/tests"]
pythonpath = [".", "src"]
addopts = "-q --strict-markers --strict-config"
markers = [
    "slow: tests lentos (entrenamiento, inferencia LLM)",
    "integration: tests de integración entre capas",
    "leakage: tests del gate anti-leakage (Principio V)",
]

[tool.coverage.run]
branch = true
source = ["src/contracts"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
